--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../dist/img/two.jpg" class="d-block w-100" alt="BurgerCheesy">
+                            <img src="./src/img/two.jpg" class="d-block w-100" alt="BurgerCheesy">
                         </div>
                         <div class="carousel-item">
-                            <img src="../dist/img/three.jpg" class="d-block w-100" alt="BurgerNextCheesy">
+                            <img src="./src/img/three.jpg" class="d-block w-100" alt="BurgerNextCheesy">
                         </div>
                         <div class="carousel-item">
-                            <img src="../dist/img/four.jpg" class="d-block w-100" alt="BurgerLastCheesy">
+                            <img src="./src/img/four.jpg" class="d-block w-100" alt="BurgerLastCheesy">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
